--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
           </li>
         </ul>
       </nav>
+
+      <!-- 햄버거 버튼 -->
+      <a href="javascript:void(0)" class="btn-hamburger">
+        <span class="material-symbols-outlined">menu</span>
+      </a>
     </div>
   </header>
 
@@ -111,9 +116,9 @@
         <span class="animate-flash purple" style="animation-delay: 0.14s;">e</span>
         <span class="animate-flash purple" style="animation-delay: 0.25s;">r</span>
         <br>
-        <span class="animate-flash purple" style="animation-delay: 0.10s;">김</span>
-        <span class="animate-flash purple" style="animation-delay: 0.16s;">재</span>
-        <span class="animate-flash purple" style="animation-delay: 0.24s;">현</span>
+        <span class="animate-flash purple" style="animation-delay: 0.10s;">고</span>
+        <span class="animate-flash purple" style="animation-delay: 0.16s;">은</span>
+        <span class="animate-flash purple" style="animation-delay: 0.24s;">빈</span>
         <span class="animate-flash" style="animation-delay: 0.12s;">입</span>
         <span class="animate-flash" style="animation-delay: 0.15s;">니</span>
         <span class="animate-flash" style="animation-delay: 0.05s;">다</span>
