--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
   <!-- <span>헬로 월드!</span>
   <span class="font-en">Hello world!</span> -->
 
-  <!-- HEADER -->
+  <div style="overflow-x: hidden;">
+    <!-- HEADER -->
   <header id="header">
     <div class="inner">
       <!-- 로고 -->
@@ -334,6 +335,9 @@
         </p>
       </div>
     </footer>
+  </div>
+
+  
 
 
   <!-- MODAL -->
